objects/Account.object
<CustomObject>
    <fields>
        <fullName>ACO_Participation__c</fullName>
        <label>ACO Participation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AAMC Collaborative Care Network, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Alliance of Ventura, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Clinical Services, PC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Central Georgia, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Coastal Georgia, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of DeKalb, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Eastern North Carolina, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Georgia, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Greater Augusta &amp; Statesboro, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Greater Houston, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Greater New York, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Green Mountains, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Maryland, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Maryland Primary Care, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Mississippi, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Mount Kisco, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of North Texas, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Northwest Florida, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Southeast Wisconsin, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of South Georgia, LLC.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Syracuse, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Texas, Inc.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of The Tri-Counties, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Coalition of Western Georgia, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Options, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Organization of New England, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Organization of Puerto Rico, Inc.</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Organization of the North Country, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Care Partners, LLC</fullName>
                </value>
                <value>
                    <fullName>Accountable Healthcare Alliance, PC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AN_Cases__c</fullName>
        <inlineHelpText>Number of anesthesia cases annually</inlineHelpText>
        <label>AN Cases</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AN_Client_Service_Mgr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AN Client Service Mgr</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>contains</operation>
                <value>CSM</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AN_Current_Billing_Company__c</fullName>
        <description>Current anesthesia billing company</description>
        <label>AN Current Billing Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>3D Anesthesia Billing Service</fullName>
                </value>
                <value>
                    <fullName>ABC (Anesthesia Business Consultants)</fullName>
                </value>
                <value>
                    <fullName>Abeo</fullName>
                </value>
                <value>
                    <fullName>ABS Medical Management</fullName>
                </value>
                <value>
                    <fullName>AccuPro Services, LTD</fullName>
                </value>
                <value>
                    <fullName>Advanced Revenue Management</fullName>
                </value>
                <value>
                    <fullName>AdvantEdge Healthcare Solutions</fullName>
                </value>
                <value>
                    <fullName>Aqreva Medical Billing &amp; Consulting</fullName>
                </value>
                <value>
                    <fullName>Alaska Billing Services</fullName>
                </value>
                <value>
                    <fullName>A Med Billing</fullName>
                </value>
                <value>
                    <fullName>AMS Solutions, Inc.</fullName>
                </value>
                <value>
                    <fullName>Anesthesia Billing, Inc.</fullName>
                </value>
                <value>
                    <fullName>Anesthesia Business Solutions</fullName>
                </value>
                <value>
                    <fullName>Anesthesia Management Partners</fullName>
                </value>
                <value>
                    <fullName>Anesthesia Resources LTD</fullName>
                </value>
                <value>
                    <fullName>Anesthesia Services, Ltd.</fullName>
                </value>
                <value>
                    <fullName>AnMed Medical Billing Service</fullName>
                </value>
                <value>
                    <fullName>A Plus Physician Billing Services</fullName>
                </value>
                <value>
                    <fullName>Athenahealth</fullName>
                </value>
                <value>
                    <fullName>BCS Healthcare Practice Management &amp; Consulting Services</fullName>
                </value>
                <value>
                    <fullName>Billing Services, Inc.</fullName>
                </value>
                <value>
                    <fullName>Bolder Anesthesia Solutions, Inc.</fullName>
                </value>
                <value>
                    <fullName>Carolina Medical Billing</fullName>
                </value>
                <value>
                    <fullName>Clear Medical Revenue Services</fullName>
                </value>
                <value>
                    <fullName>Clinical Colleagues, Inc.</fullName>
                </value>
                <value>
                    <fullName>Compass Anesthesiology Services Group, Inc.</fullName>
                </value>
                <value>
                    <fullName>Complete Medical Billing Solutions, Inc.</fullName>
                </value>
                <value>
                    <fullName>CompMed</fullName>
                </value>
                <value>
                    <fullName>Comprehensive Medical Management</fullName>
                </value>
                <value>
                    <fullName>Core Medical Billing, LLC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AN_Customer__c</fullName>
        <formula>IF( NOT(INCLUDES( AN_RCM__c , "Prospect")),1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AN Customer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AN_Notes__c</fullName>
        <label>AN Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AN_RCM__c</fullName>
        <inlineHelpText>If this account IS an Anesthesia client, please select the correct product(s) or service(s).  If this account is NOT an Anesthesia client, select prospect or previous client.</inlineHelpText>
        <label>AN</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AN Coding Only</fullName>
                </value>
                <value>
                    <fullName>AN Consulting Services</fullName>
                </value>
                <value>
                    <fullName>AN CRNA RCM</fullName>
                </value>
                <value>
                    <fullName>AN PM</fullName>
                </value>
                <value>
                    <fullName>AN RCM</fullName>
                </value>
                <value>
                    <fullName>Previous Client</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AN_Staffing_Mgmt_Company__c</fullName>
        <label>AN Staffing/Mgmt Company</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Anesthesia Healthcare Partners</fullName>
                </value>
                <value>
                    <fullName>Anesthesia Staffing Consultants ASC</fullName>
                </value>
                <value>
                    <fullName>Apollo MD</fullName>
                </value>
                <value>
                    <fullName>Carepoint Health Medical Group</fullName>
                </value>
                <value>
                    <fullName>Clinical Colleagues, Inc. (CCI)</fullName>
                </value>
                <value>
                    <fullName>EmCare</fullName>
                </value>
                <value>
                    <fullName>Envision/Amsurg</fullName>
                </value>
                <value>
                    <fullName>FOAA Anesthesia Services</fullName>
                </value>
                <value>
                    <fullName>Health Management Associates</fullName>
                </value>
                <value>
                    <fullName>JLR Medical Group</fullName>
                </value>
                <value>
                    <fullName>Liberty</fullName>
                </value>
                <value>
                    <fullName>LifeLinc Anesthesia</fullName>
                </value>
                <value>
                    <fullName>Mednax/American Anesthesiology</fullName>
                </value>
                <value>
                    <fullName>Medstream Anesthesia Solutions</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                    <default>true</default>
                    <label>N/A</label>
                </value>
                <value>
                    <fullName>North American Partners in Anesthesia NAPA</fullName>
                </value>
                <value>
                    <fullName>Northstar Anesthesia Partners</fullName>
                </value>
                <value>
                    <fullName>PhyMed</fullName>
                </value>
                <value>
                    <fullName>Physicians Business Office</fullName>
                </value>
                <value>
                    <fullName>Plexus Management Group, Inc.</fullName>
                </value>
                <value>
                    <fullName>Premier Anesthesia</fullName>
                </value>
                <value>
                    <fullName>Resolute/Goldman Sachs</fullName>
                </value>
                <value>
                    <fullName>SAFE Anesthesia</fullName>
                </value>
                <value>
                    <fullName>Somnia Anesthesia</fullName>
                </value>
                <value>
                    <fullName>Spectrum Medical Group</fullName>
                </value>
                <value>
                    <fullName>Team Health</fullName>
                </value>
                <value>
                    <fullName>US Anesthesia Partners</fullName>
                </value>
                <value>
                    <fullName>Vertex Medical Solutions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AN_Status_Flag__c</fullName>
        <formula>IMAGE( CASE(  AN_Status_Ranking__c  , "Satisfied", "/img/samples/flag_green.gif", "Some Issues", "/img/samples/flag_yellow.gif", "At Risk", "/img/samples/flag_red.gif", "/s.gif"), "Status Flag")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Demonstrates the health of our relationship with this client for the AN Division.  Updated by changing the AN Status Ranking picklist.</inlineHelpText>
        <label>AN Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AN_Status_Ranking__c</fullName>
        <label>AN Status Ranking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Some Issues</fullName>
                </value>
                <value>
                    <fullName>At Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AN_Status_Report_Current_Issues__c</fullName>
        <label>AN Status Report - Current Issues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AS_CSM_Churn_Sentiment__c</fullName>
        <label>AS CSM Churn Sentiment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low Probability</fullName>
                </value>
                <value>
                    <fullName>Medium Probability</fullName>
                </value>
                <value>
                    <fullName>High Probability</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AS_HS_Competitive_Risk__c</fullName>
        <label>AS Competitive Risk</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Low Risk</fullName>
                </value>
                <value>
                    <fullName>Medium Risk</fullName>
                </value>
                <value>
                    <fullName>High Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AS_HS_Engagement__c</fullName>
        <label>AS Engagement</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Frequent</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Infrequent</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AS_HS_Invoice__c</fullName>
        <label>AS Invoice</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>On-time</fullName>
                </value>
                <value>
                    <fullName>Sometimes late</fullName>
                </value>
                <value>
                    <fullName>Requires intervention</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AS_HS_NPS_Score__c</fullName>
        <label>AS NPS Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Promoter</fullName>
                </value>
                <value>
                    <fullName>Passive</fullName>
                </value>
                <value>
                    <fullName>Detractor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AS_HS_Product_Usage__c</fullName>
        <label>AS Product Usage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Frequent</fullName>
                </value>
                <value>
                    <fullName>Regular</fullName>
                </value>
                <value>
                    <fullName>Infrequent</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AS_HS_Training__c</fullName>
        <label>AS Training</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No training required</fullName>
                </value>
                <value>
                    <fullName>Peer-training required</fullName>
                </value>
                <value>
                    <fullName>Full training required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AS_Health_Score__c</fullName>
        <label>AS Health Score</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_Hubspot_Score__c</fullName>
        <label>AS Hubspot Score</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>High Level Activity</fullName>
                </value>
                <value>
                    <fullName>Normal Activity</fullName>
                </value>
                <value>
                    <fullName>Low Level Activity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AS_Status_Flag__c</fullName>
        <formula>IMAGE( CASE(  AS_Status_Ranking__c  , "Satisfied", "/img/samples/flag_green.gif", "Some Issues", "/img/samples/flag_yellow.gif", "At Risk", "/img/samples/flag_red.gif", "/s.gif"), "Status Flag")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Demonstrates the health of our relationship with this client for the AS Division.  Updated by changing the AS Status Report - Ranking picklist.</inlineHelpText>
        <label>AS Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AS_Status_Ranking__c</fullName>
        <label>AS Status Ranking</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Satisfied</fullName>
                </value>
                <value>
                    <fullName>Some Issues</fullName>
                </value>
                <value>
                    <fullName>At Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AS_Status_Report_Current_Issues__c</fullName>
        <label>AS Status Report - Current Issues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AS_Support_Hours__c</fullName>
        <label>AS Support Hours</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expected level of activity</fullName>
                </value>
                <value>
                    <fullName>Excessive/Minimal Support</fullName>
                </value>
                <value>
                    <fullName>No support used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AS__c</fullName>
        <inlineHelpText>If this account IS an Analytic Services client, please select the correct product(s) or service(s).  If this account is NOT an Analytic Services client, select prospect or previous client.</inlineHelpText>
        <label>AS</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Compensation Calculator</fullName>
                </value>
                <value>
                    <fullName>Condition Awareness</fullName>
                </value>
                <value>
                    <fullName>No-Show Predictor</fullName>
                </value>
                <value>
                    <fullName>Portal - Chart Reconciliation</fullName>
                </value>
                <value>
                    <fullName>Portal - MD Callbacks</fullName>
                </value>
                <value>
                    <fullName>Portal - TOPS</fullName>
                </value>
                <value>
                    <fullName>Portal - WebQI</fullName>
                </value>
                <value>
                    <fullName>Previous Client</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Provider Metrics</fullName>
                </value>
                <value>
                    <fullName>Revenue Integrity</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AVL_System__c</fullName>
        <label>AVL System</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CTS America</fullName>
                </value>
                <value>
                    <fullName>EMS Anywhere</fullName>
                </value>
                <value>
                    <fullName>FleetEyes</fullName>
                </value>
                <value>
                    <fullName>Fleetmatics</fullName>
                </value>
                <value>
                    <fullName>Geotab</fullName>
                </value>
                <value>
                    <fullName>GPS Logic</fullName>
                </value>
                <value>
                    <fullName>GPS Solution</fullName>
                </value>
                <value>
                    <fullName>Motorola MARVLIS</fullName>
                </value>
                <value>
                    <fullName>Network Fleet</fullName>
                </value>
                <value>
                    <fullName>Nextraq</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>OSSI</fullName>
                </value>
                <value>
                    <fullName>Pro Phoenix</fullName>
                </value>
                <value>
                    <fullName>Proprietary/In-House</fullName>
                </value>
                <value>
                    <fullName>RSI</fullName>
                </value>
                <value>
                    <fullName>Sage Quest</fullName>
                </value>
                <value>
                    <fullName>Street Eagle</fullName>
                </value>
                <value>
                    <fullName>Teletrack</fullName>
                </value>
                <value>
                    <fullName>Traumasoft</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Zoll</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Aliases__c</fullName>
        <inlineHelpText>Place to store account short name, former name or other ways the entity is known</inlineHelpText>
        <label>Account Aliases</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Category__c</fullName>
        <label>Account Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Business / Corporation</fullName>
                </value>
                <value>
                    <fullName>Emergency Mgmt Agency</fullName>
                </value>
                <value>
                    <fullName>Federal Agency</fullName>
                </value>
                <value>
                    <fullName>Fire/EMS Agency</fullName>
                </value>
                <value>
                    <fullName>Healthcare Facility</fullName>
                </value>
                <value>
                    <fullName>Health System</fullName>
                </value>
                <value>
                    <fullName>Medical Professional</fullName>
                </value>
                <value>
                    <fullName>Military</fullName>
                </value>
                <value>
                    <fullName>Physician Group</fullName>
                </value>
                <value>
                    <fullName>Public Health Organization</fullName>
                </value>
                <value>
                    <fullName>Business Partner</fullName>
                </value>
                <value>
                    <fullName>Competitor</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Account_Legacy_ID__c</fullName>
        <label>Account Legacy ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The account manager assigned to this account</inlineHelpText>
        <label>Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AccruedUnApprovedExpenseTotal__c</fullName>
        <label>Accruing/Unpaid Expense Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Acct__c</fullName>
        <displayFormat>Acct-{00000000}</displayFormat>
        <inlineHelpText>R1 staff should reference this ID when requesting Salesforce.com assistance from internal system support (e.g. Mike Lippman)</inlineHelpText>
        <label>Acct #</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Address_String__c</fullName>
        <formula>if(len(BillingStreet)&gt;1,BillingStreet + ',  ', '') + if(len(BillingCity)&gt;1,BillingCity+', ','') + BillingState+', '+  BillingPostalCode + Case(BillingCountry,'United States','','US','','USA','',BillingCountry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Address String</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Admin_Force__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin Force</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliation__c</fullName>
        <label>Affiliation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Agency_Type__c</fullName>
        <label>Agency Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Agriculture</fullName>
                </value>
                <value>
                    <fullName>AOC</fullName>
                </value>
                <value>
                    <fullName>CDC</fullName>
                </value>
                <value>
                    <fullName>City</fullName>
                </value>
                <value>
                    <fullName>City - Healthcare/Public Health</fullName>
                </value>
                <value>
                    <fullName>Communications</fullName>
                </value>
                <value>
                    <fullName>County</fullName>
                </value>
                <value>
                    <fullName>County - Healthcare/Public Health</fullName>
                </value>
                <value>
                    <fullName>County-Law Enforcement</fullName>
                </value>
                <value>
                    <fullName>DHHS</fullName>
                </value>
                <value>
                    <fullName>DHS</fullName>
                </value>
                <value>
                    <fullName>DOC</fullName>
                </value>
                <value>
                    <fullName>DoD</fullName>
                </value>
                <value>
                    <fullName>DOD-Joint</fullName>
                </value>
                <value>
                    <fullName>DOD-USA</fullName>
                </value>
                <value>
                    <fullName>DOD-USAF</fullName>
                </value>
                <value>
                    <fullName>DOD-USCG</fullName>
                </value>
                <value>
                    <fullName>DOD-USMC</fullName>
                </value>
                <value>
                    <fullName>DOE</fullName>
                </value>
                <value>
                    <fullName>DOI</fullName>
                </value>
                <value>
                    <fullName>DOT</fullName>
                </value>
                <value>
                    <fullName>DVA</fullName>
                </value>
                <value>
                    <fullName>Education-Curriculum</fullName>
                </value>
                <value>
                    <fullName>Education-Customer</fullName>
                </value>
                <value>
                    <fullName>EMA</fullName>
                </value>
                <value>
                    <fullName>EPA</fullName>
                </value>
                <value>
                    <fullName>FAA</fullName>
                </value>
                <value>
                    <fullName>Finance</fullName>
                </value>
                <value>
                    <fullName>GAO</fullName>
                </value>
                <value>
                    <fullName>GSA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Alt_Email_Domain__c</fullName>
        <label>Alt Email Domain</label>
        <length>125</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Asset List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bonus_Penalty_Factor__c</fullName>
        <label>Bonus Penalty Factor</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CAAS_Accredited__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CAAS Accredited</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>